--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BUS_LichSu.cs" />
     <Compile Include="BUS_Login.cs" />
     <Compile Include="BUS_PhieuTiem.cs" />
     <Compile Include="BUS_Vaccine.cs" />
