--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAO_KhachHang.cs" />
     <Compile Include="DAO_LichSu.cs" />
     <Compile Include="DAO_PhieuTiem.cs" />
+    <Compile Include="DAO_ThuNgan.cs" />
     <Compile Include="DAO_Vaccine.cs" />
     <Compile Include="DBProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
