--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -41,10 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO_KhachHang.cs" />
     <Compile Include="DTO_LichSu.cs" />
     <Compile Include="DTO_PhieuTiem.cs" />
     <Compile Include="DTO_Vaccine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DTO_ThuNgan.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
