--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAO_ChiTietTiem.cs" />
     <Compile Include="DAO_KhachHang.cs" />
     <Compile Include="DAO_LichSu.cs" />
     <Compile Include="DAO_PhieuTiem.cs" />
