--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO_ChiTietTiem.cs" />
     <Compile Include="DTO_KhachHang.cs" />
     <Compile Include="DTO_LichSu.cs" />
     <Compile Include="DTO_PhieuTiem.cs" />
