--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BUS_ChiTietTiem.cs" />
+    <Compile Include="BUS_GiamHo.cs" />
+    <Compile Include="BUS_HoaDon.cs" />
     <Compile Include="BUS_KhachHang.cs" />
     <Compile Include="BUS_LichSu.cs" />
     <Compile Include="BUS_Login.cs" />
