--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTO_ChiTietTiem.cs" />
+    <Compile Include="DTO_GiamHo.cs" />
+    <Compile Include="DTO_HoaDon.cs" />
     <Compile Include="DTO_KhachHang.cs" />
     <Compile Include="DTO_LichSu.cs" />
     <Compile Include="DTO_PhieuTiem.cs" />
