thêm menu thống kê, fix pass pass

--- a/GUI/App.config
+++ b/GUI/App.config
@@ -6,7 +6,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="GUI.Properties.Settings.Setting" connectionString="Data Source=DESKTOP-NATE\SQLEXPRESS;Initial Catalog=TTCSDL;Integrated Security=True"
+    <add name="GUI.Properties.Settings.Setting" connectionString="Data Source=DESKTOP-FIFGC10\SQLEXPRESS;Initial Catalog=TTCSDLv81;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <applicationSettings>
