--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -82,6 +82,12 @@
     <Compile Include="PhieuTiemGUI.Designer.cs">
       <DependentUpon>PhieuTiemGUI.cs</DependentUpon>
     </Compile>
+    <Compile Include="PhieuTiemLIST.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PhieuTiemLIST.Designer.cs">
+      <DependentUpon>PhieuTiemLIST.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThanhToanGUI.cs">
@@ -113,6 +119,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PhieuTiemGUI.resx">
       <DependentUpon>PhieuTiemGUI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PhieuTiemLIST.resx">
+      <DependentUpon>PhieuTiemLIST.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
