Thêm report Hóa đơn (cần nhiều dữ liệu từ DB, chưa có cách get hợp lý)

--- a/GUI/App.config
+++ b/GUI/App.config
@@ -6,7 +6,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="GUI.Properties.Settings.Setting" connectionString="Data Source=WIN-AROEIEHVR5G\SQLEXPRESS;Initial Catalog=TTCSDLv2;Integrated Security=True"
+    <add name="GUI.Properties.Settings.Setting" connectionString="Data Source=THINKDEADLINE\SQLEXPRESS;Initial Catalog=TTCSDL v9;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <applicationSettings>
