--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -36,7 +36,12 @@
     <Reference Include="DevExpress.Charts.v19.2.Core, Version=19.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Data.v19.2" />
     <Reference Include="DevExpress.Images.v19.2, Version=19.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Office.v19.2.Core, Version=19.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Pdf.v19.2.Core, Version=19.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.PivotGrid.v19.2.Core, Version=19.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Printing.v19.2.Core" />
+    <Reference Include="DevExpress.RichEdit.v19.2.Core, Version=19.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.RichEdit.v19.2.Export, Version=19.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Utils.v19.2" />
     <Reference Include="DevExpress.Utils.v19.2.UI, Version=19.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraBars.v19.2" />
@@ -45,9 +50,12 @@
     <Reference Include="DevExpress.XtraCharts.v19.2.UI, Version=19.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraCharts.v19.2.Wizard, Version=19.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraEditors.v19.2" />
+    <Reference Include="DevExpress.XtraGauges.v19.2.Core, Version=19.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraGrid.v19.2, Version=19.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraLayout.v19.2, Version=19.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraPrinting.v19.2, Version=19.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraReports.v19.2, Version=19.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraReports.v19.2.Extensions, Version=19.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -99,6 +107,21 @@
     <Compile Include="PhieuTiemLIST.Designer.cs">
       <DependentUpon>PhieuTiemLIST.cs</DependentUpon>
     </Compile>
+    <Compile Include="PhieuTiemRP.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="PhieuTiemRP.Designer.cs">
+      <DependentUpon>PhieuTiemRP.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PhieuTiemRP_Dataset.cs">
+      <DependentUpon>PhieuTiemRP_Dataset.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="PhieuTiemRP_Dataset.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PhieuTiemRP_Dataset.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="PhieuTiemRP_Provider.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThanhToanGUI.cs">
@@ -143,6 +166,9 @@
     <EmbeddedResource Include="PhieuTiemLIST.resx">
       <DependentUpon>PhieuTiemLIST.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PhieuTiemRP.resx">
+      <DependentUpon>PhieuTiemRP.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -167,6 +193,17 @@
       <DependentUpon>VaccineGUI.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
+    <None Include="PhieuTiemRP_Dataset.xsc">
+      <DependentUpon>PhieuTiemRP_Dataset.xsd</DependentUpon>
+    </None>
+    <None Include="PhieuTiemRP_Dataset.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>PhieuTiemRP_Dataset.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="PhieuTiemRP_Dataset.xss">
+      <DependentUpon>PhieuTiemRP_Dataset.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -204,6 +241,7 @@
     <None Include="Resources\mtavc_banner.png" />
     <None Include="Resources\home.png" />
     <None Include="Resources\home_clicked.png" />
+    <None Include="Resources\LOGO.png" />
     <Content Include="Resources\PROC.txt" />
     <None Include="Resources\statistics.png" />
     <None Include="Resources\statistics_clicked.png" />
