--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -151,6 +151,7 @@
     <Compile Include="ThanhToanLIST.Designer.cs">
       <DependentUpon>ThanhToanLIST.cs</DependentUpon>
     </Compile>
+    <Compile Include="ThongKeCreator.cs" />
     <Compile Include="ThongKeGUI.cs">
       <SubType>UserControl</SubType>
     </Compile>
