--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -112,6 +112,12 @@
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="MessageBoxEx.cs" />
+    <Compile Include="TiemGUI.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TiemGUI.Designer.cs">
+      <DependentUpon>TiemGUI.cs</DependentUpon>
+    </Compile>
     <Compile Include="PhieuTiemGUI.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -191,6 +197,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TiemGUI.resx">
+      <DependentUpon>TiemGUI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PhieuTiemGUI.resx">
       <DependentUpon>PhieuTiemGUI.cs</DependentUpon>
