--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -71,6 +71,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AD_QLTaiKhoan.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AD_QLTaiKhoan.Designer.cs">
+      <DependentUpon>AD_QLTaiKhoan.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -177,6 +183,9 @@
     <Compile Include="VaccineGUI.Designer.cs">
       <DependentUpon>VaccineGUI.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AD_QLTaiKhoan.resx">
+      <DependentUpon>AD_QLTaiKhoan.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
