--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -77,6 +77,10 @@
     <Compile Include="AD_QLTaiKhoan.Designer.cs">
       <DependentUpon>AD_QLTaiKhoan.cs</DependentUpon>
     </Compile>
+    <Compile Include="AD_QLVaccine.cs" />
+    <Compile Include="AD_QLVaccine.Designer.cs">
+      <DependentUpon>AD_QLVaccine.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -191,6 +195,9 @@
     </Compile>
     <EmbeddedResource Include="AD_QLTaiKhoan.resx">
       <DependentUpon>AD_QLTaiKhoan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AD_QLVaccine.resx">
+      <DependentUpon>AD_QLVaccine.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
