--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -77,7 +77,9 @@
     <Compile Include="AD_QLTaiKhoan.Designer.cs">
       <DependentUpon>AD_QLTaiKhoan.cs</DependentUpon>
     </Compile>
-    <Compile Include="AD_QLVaccine.cs" />
+    <Compile Include="AD_QLVaccine.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="AD_QLVaccine.Designer.cs">
       <DependentUpon>AD_QLVaccine.cs</DependentUpon>
     </Compile>
